-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 16, 17
-
Component/s: hotspot
-
b20
The test failed on 4/21 nightly.
#Internal Error (/home/jenkins/workspace/nightly/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahMarkBitMap.cpp:127), pid=34215, tid=35276
# assert(ShenandoahHeap::heap()->is_in(addr)) failed: Trying to access bitmap 0x00007f20bc0902d8 for address 0x0000000000000000 not in the heap.
#
# JRE version: OpenJDK Runtime Environment (17.0) (fastdebug build 17-internal+0-adhoc.jenkins.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17-internal+0-adhoc.jenkins.jdk-jdk, mixed mode, tiered, compressed oops, compressed class ptrs, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x164190a] ShenandoahMarkBitMap::check_mark(HeapWordImpl**) const+0x7a
#
#Internal Error (/home/jenkins/workspace/nightly/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahMarkBitMap.cpp:127), pid=34215, tid=35276
# assert(ShenandoahHeap::heap()->is_in(addr)) failed: Trying to access bitmap 0x00007f20bc0902d8 for address 0x0000000000000000 not in the heap.
#
# JRE version: OpenJDK Runtime Environment (17.0) (fastdebug build 17-internal+0-adhoc.jenkins.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17-internal+0-adhoc.jenkins.jdk-jdk, mixed mode, tiered, compressed oops, compressed class ptrs, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x164190a] ShenandoahMarkBitMap::check_mark(HeapWordImpl**) const+0x7a
#