8265759: Shenandoah: Avoid race for referent in assert

Reviewed-by: shade, zgu